# gr-difi

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
.github/workflows/: .check-in.yaml
cmake/Modules/: difiConfig.cmake
docs/: CMakeLists.txt  FAQ.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README.md  difi_paired_example.grc  difi_quickstart.md  difi_standalone.grc  pn11_over_difi.grc  pn11_over_difi.py  pn11_over_difi_rx.grc  pn11_over_difi_tx.grc
grc/: CMakeLists.txt  difi_sink_cpp.block.yml  difi_source_cpp.block.yml
include/difi/: CMakeLists.txt  api.h  difi_common.h  difi_sink_cpp.h  difi_source_cpp.h
lib/: CMakeLists.txt  difi_sink_cpp_impl.cc  difi_sink_cpp_impl.h  difi_source_cpp_impl.cc  difi_source_cpp_impl.h  tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h  udp_socket.cc  udp_socket.h
python/: CMakeLists.txt  __init__.py  qa_difi_blocks_cpp.py
python/bindings/: CMakeLists.txt  difi_sink_cpp_python.cc  difi_source_cpp_python.cc  python_bindings.cc
python/bindings/docstrings/: difi_sink_cpp_pydoc_template.h  difi_source_cpp_pydoc_template.h
utils/: benchmark_difi_source.py
